// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchBar > should render search bar component > expected html 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="space-y-2"
      id="input-search-field-test-id"
    >
      <label
        class="block"
        for="input-search-field-test-id-input"
        id="input-search-field-test-id-label"
      >
        <span
          class="font-semibold"
        >
          gcweb:search-bar.search
        </span>
      </label>
      <div
        class="relative"
      >
        <div
          class="pointer-events-none absolute inset-y-0 start-0 flex h-full items-center ps-3"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-magnifying-glass"
            data-icon="magnifying-glass"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
              fill="currentColor"
            />
          </svg>
        </div>
        <input
          aria-labelledby="input-search-field-test-id-label"
          class="block border-gray-500 ps-10 focus:border-blue-500 focus:ring-3 focus:ring-blue-500 focus:outline-hidden read-only:pointer-events-none read-only:bg-gray-100 read-only:opacity-70 disabled:pointer-events-none disabled:bg-gray-100 disabled:opacity-70 aria-invalid:border-red-500 aria-invalid:focus:border-red-500 aria-invalid:focus:ring-red-500 w-full rounded-lg"
          id="input-search-field-test-id-input"
          name="test"
          type="search"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchBar > should render search bar suggestions > expected html 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="space-y-2"
      id="input-search-field-test-id"
    >
      <label
        class="block"
        for="input-search-field-test-id-input"
        id="input-search-field-test-id-label"
      >
        <span
          class="font-semibold"
        >
          gcweb:search-bar.search
        </span>
      </label>
      <div
        class="relative"
      >
        <div
          class="pointer-events-none absolute inset-y-0 start-0 flex h-full items-center ps-3"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-magnifying-glass"
            data-icon="magnifying-glass"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
              fill="currentColor"
            />
          </svg>
        </div>
        <input
          aria-labelledby="input-search-field-test-id-label"
          class="block border-gray-500 ps-10 focus:border-blue-500 focus:ring-3 focus:ring-blue-500 focus:outline-hidden read-only:pointer-events-none read-only:bg-gray-100 read-only:opacity-70 disabled:pointer-events-none disabled:bg-gray-100 disabled:opacity-70 aria-invalid:border-red-500 aria-invalid:focus:border-red-500 aria-invalid:focus:ring-red-500 w-full rounded-lg"
          id="input-search-field-test-id-input"
          name="test"
          type="search"
          value="search test"
        />
      </div>
    </div>
    <div
      class="absolute z-10 mt-1 w-full overflow-hidden rounded-sm border border-stone-300 bg-white shadow-2xl"
    >
      <ul>
        <li>
          <button
            class="inline-flex w-full border-none px-4 py-2 hover:bg-neutral-500 hover:text-white focus:bg-gray-600 focus:text-white focus:outline-none"
            id="«r4»0"
            tabindex="-1"
            type="button"
          >
            suggestion1
          </button>
        </li>
        <li>
          <button
            class="inline-flex w-full border-none px-4 py-2 hover:bg-neutral-500 hover:text-white focus:bg-gray-600 focus:text-white focus:outline-none"
            id="«r4»1"
            tabindex="-1"
            type="button"
          >
            suggestion2
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
